    PathIOException. (Yongjun Zhang via atm)

    HADOOP-10562. Namenode exits on exception without printing stack trace
    in AbstractDelegationTokenSecretManager. (Arpit Agarwal)

    HADOOP-10568. Add s3 server-side encryption. (David S. Wang via atm)

    HADOOP-10541. InputStream in MiniKdc#initKDCServer for minikdc.ldiff is not
    closed. (Swarnim Kulkarni via cnauroth)

Release 2.4.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-10466. Lower the log level in UserGroupInformation.  (Nicolas
    Liochon via szetszwo)

  OPTIMIZATIONS

  BUG FIXES 

    HADOOP-10455. When there is an exception, ipc.Server should first check
    whether it is an terse exception.  (szetszwo)

    HADOOP-10456. Bug in Configuration.java exposed by Spark
    (ConcurrentModificationException).  (Nishkam Ravi via cnauroth)

    HADOOP-10473. TestCallQueueManager should interrupt before counting calls.
    (szetszwo)

    HADOOP-10490. TestMapFile and TestBloomMapFile leak file descriptors.
    (cnauroth)

    HADOOP-10522. JniBasedUnixGroupMapping mishandles errors. (kihwal)

    HADOOP-10527. Fix incorrect return code and allow more retries on EINTR.
    (kihwal)

Release 2.4.0 - 2014-04-07 

  INCOMPATIBLE CHANGES

    HADOOP-8691. FsShell can print "Found xxx items" unnecessarily often.
    (Daryn Sharp via wheat9)

  NEW FEATURES

    HADOOP-10184. Hadoop Common changes required to support HDFS ACLs. (See
    breakdown of tasks below for features and contributors)

  IMPROVEMENTS

    HADOOP-10139. Update and improve the Single Cluster Setup document.
    (Akira Ajisaka via Arpit Agarwal)

    HADOOP-10295. Allow distcp to automatically identify the checksum type of 
    source files and use it for the target. (jing9 and Laurent Goujon)

    HADOOP-10333. Fix grammatical error in overview.html document.
    (René Nyffenegger via suresh)

    HADOOP-10343. Change info to debug log in LossyRetryInvocationHandler. (arpit)
